--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eva-icons": "^1.1.2",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
